# climasus-data

./: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml
.github/workflows/: publish-pypi.yml  sync-r-pkg.yml
dictionaries/pt-en/: columns.json
dictionaries/pt-es/: columns.json
metadata/: datasus_columns.json  datasus_sources.json  datasus_systems.json  sinan_diseases.json  uf_codes.json
r-pkg/: .Rbuildignore  DESCRIPTION  NAMESPACE
r-pkg/R/: climasus_data.R
r-pkg/inst/extdata/: .gitkeep
r-pkg/inst/extdata/dictionaries/pt-en/: categories.json
r-pkg/inst/extdata/dictionaries/pt-es/: categories.json
r-pkg/inst/extdata/disease_groups/: climate_sensitive.json  core.json
r-pkg/inst/extdata/metadata/: inmet_normals.json  regions.json  sus_systems.json
r-pkg/tests/: testthat.R
r-pkg/tests/testthat/: test-api.R
scripts/: SCHEMA_v2.md  migrate_v2.py  validate_consolidation.py
src/climasus_data/: __init__.py
templates/: age_groups.json  seasonal_patterns.json
