[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climasus-data"
version = "0.1.0"
description = "Shared metadata catalog for climasus4r (R) and climasus4py (Python)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Max Anjos", email = "maxanjos@campus.ul.pt" },
]
keywords = ["datasus", "sus", "climate", "health", "brazil", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Repository = "https://github.com/climasus/climasus-data"

[tool.hatch.build.targets.wheel]
packages = ["src/climasus_data"]

# Include data files (at repo root) inside the wheel package directory
[tool.hatch.build.targets.wheel.force-include]
"dictionaries" = "climasus_data/dictionaries"
"disease_groups" = "climasus_data/disease_groups"
"geo" = "climasus_data/geo"
"metadata" = "climasus_data/metadata"
"manifest.json" = "climasus_data/manifest.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/climasus_data/",
    "dictionaries/",
    "disease_groups/",
    "geo/",
    "metadata/",
    "manifest.json",
    "README.md",
    "LICENSE",
]
