[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climasus-data"
version = "0.1.5"
description = "Shared metadata catalog for climasus4r (R) and climasus4py (Python)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Marlon Resende Faria", email = "marlon.faria@usp.br" },
    { name = "Thauã Menezes", email = "thaua.menezes@unesp.br" },
    { name = "Dr. Max Anjos", email = "max.anjos@campus.ul.pt" },
    { name = "Andrey Araújo", email = "andreyke.araujo@gmail.com" },
]
maintainers = [
    { name = "Dr. Max Anjos", email = "max.anjos@campus.ul.pt" },
]
keywords = ["datasus", "sus", "climate", "health", "brazil", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/climasus/climasus-data"
Repository = "https://github.com/climasus/climasus-data"
"Bug Tracker" = "https://github.com/climasus/climasus-data/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/climasus_data"]

# Include data files (at repo root) inside the wheel package directory
[tool.hatch.build.targets.wheel.force-include]
"dictionaries" = "climasus_data/dictionaries"
"disease_groups" = "climasus_data/disease_groups"
"geo" = "climasus_data/geo"
"metadata" = "climasus_data/metadata"
"templates" = "climasus_data/templates"
"manifest.json" = "climasus_data/manifest.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/climasus_data/",
    "dictionaries/",
    "disease_groups/",
    "geo/",
    "metadata/",
    "templates/",
    "manifest.json",
    "README.md",
    "LICENSE",
]
